--- a/example.html
+++ b/example.html
@@ -14,13 +14,11 @@
                     if (!installed) {
                         alert("Serial Port Interface extension is missing. Please install");
                     }
-                    console.log('installed')
+                    console.log('Serial Port Interface extension installed', installed)
                 }
             );
         }
         window.addEventListener("load", afterLoaded, false);
-
-
     </script>
 </head>
 
