--- a/example.html
+++ b/example.html
@@ -25,18 +25,19 @@
 
         function afterLoaded() {
             SerialBridgeExtensionInstalled = false
-            if (document.getElementById('ChromeSerialBridgeFrame') === null) {
+            ChromeSerialBridgeFrame = document.getElementById('ChromeSerialBridgeFrame')
+            if ( ChromeSerialBridgeFrame === null) {
                 alert("Serial Bridge interface extension is missing. Please install.");
             }
             else {
-                document.getElementById('ChromeSerialBridgeFrame').contentWindow.isSerialBridgeExtensionInstalled(
+                ChromeSerialBridgeFrame.contentWindow.isSerialBridgeExtensionInstalled(
                     function (installed) {
                         if (installed.result === 'ERR') {
                             alert("No communication with the Serial Bridge interface extension.");
                         }
                         else {
                             SerialBridgeExtensionInstalled = true
-                            serialBridge = new SerialBridge;
+                            serialBridge = new ChromeSerialBridgeFrame.contentWindow.SerialBridge;
                         }
                     }
                 );
@@ -51,6 +52,7 @@
 </head>
 
 <body>
+    <br>
     <button id="checkserialport" onclick="checkSerialBridgePortIsConnect()">Check Serial Bridge port is connected</button>
 </body>
 
