--- a/example.html
+++ b/example.html
@@ -43,7 +43,7 @@
                 );
             }
 
-            if (!SerialBridgeExtensionInstalled) {
+            if (SerialBridgeExtensionInstalled === false) {
                 document.getElementById("checkserialport").disabled = true;
             }
         }
