--- a/example.html
+++ b/example.html
@@ -36,15 +36,11 @@
                             alert("No communication with the Serial Bridge interface extension.");
                         }
                         else {
-                            SerialBridgeExtensionInstalled = true
                             serialBridge = new ChromeSerialBridgeFrame.contentWindow.SerialBridge;
+                            document.getElementById("checkserialport").disabled = false;
                         }
                     }
                 );
-            }
-
-            if (SerialBridgeExtensionInstalled === false) {
-                document.getElementById("checkserialport").disabled = true;
             }
         }
         window.addEventListener("load", afterLoaded, false);
@@ -53,7 +49,7 @@
 
 <body>
     <br>
-    <button id="checkserialport" onclick="checkSerialBridgePortIsConnect()">Check Serial Bridge port is connected</button>
+    <button id="checkserialport" onclick="checkSerialBridgePortIsConnect()" disabled>Check Serial Bridge port is connected</button>
 </body>
 
 </html>
