--- a/example.html
+++ b/example.html
@@ -55,14 +55,15 @@
     <script>
         const connectButton = document.getElementById("connect");
         connectButton.addEventListener('click', async () => {
-            try {
+            mcuRequestPort();
+            /*try {
                 const port = await navigator.serial.requestPort();
                 console.log(port)
                 //KO let ports = await navigator.serial.getPorts();
                 // console.log(ports)
             } catch (e) {
                 console.error(e)
-            }
+            }*/
         });
     </script>
 
