--- a/example.html
+++ b/example.html
@@ -55,15 +55,14 @@
     <script>
         const connectButton = document.getElementById("connect");
         connectButton.addEventListener('click', async () => {
-            mcuRequestPort();
-            /*try {
+            try {
                 const port = await navigator.serial.requestPort();
                 console.log(port)
                 //KO let ports = await navigator.serial.getPorts();
                 // console.log(ports)
             } catch (e) {
                 console.error(e)
-            }*/
+            }
         });
     </script>
 
