--- a/example.html
+++ b/example.html
@@ -54,7 +54,7 @@
 
     <script>
         const connectButton = document.getElementById("connect");
-        connectButton.addEventListener('click', () => {
+        connectButton.addEventListener('click', async () => {
             window.postMessage({
                 type: "WALT3_CLIENT",
                 text: 'requestInfo'
