--- a/example.html
+++ b/example.html
@@ -60,15 +60,16 @@
                 text: 'requestInfo'
             }, "*");
 
+            connectMCU();
 
-            try {
+            /*try {
                 const port = await navigator.serial.requestPort();
                 console.log(port)
                 //KO let ports = await navigator.serial.getPorts();
                 // console.log(ports)
             } catch (e) {
                 console.error(e)
-            }
+            }*/
 
         });
     </script>
