--- a/example.html
+++ b/example.html
@@ -60,8 +60,8 @@
                 text: 'requestInfo'
             }, "*");
 
-            ChromeSerialBridgeFrame = document.getElementById('ChromeSerialBridgeFrame')
-            ChromeSerialBridgeFrame.contentWindow.connectMCU();
+            //ChromeSerialBridgeFrame = document.getElementById('ChromeSerialBridgeFrame')
+            //ChromeSerialBridgeFrame.contentWindow.connectMCU();
 
             /*try {
                 const port = await navigator.serial.requestPort();
