--- a/example.html
+++ b/example.html
@@ -43,6 +43,10 @@
             }
         }
         window.addEventListener("load", afterLoaded, false);
+
+        window.addEventListener("wallet-event", () => {
+            console.log('chromeSerailBridge Wallet Event')
+        });
     </script>
 </head>
 
