--- a/example.html
+++ b/example.html
@@ -44,9 +44,9 @@
         }
         window.addEventListener("load", afterLoaded, false);
 
-        window.addEventListener("wallet-event", () => {
+        /*window.addEventListener("wallet-event", () => {
             console.log('chromeSerailBridge Wallet Event')
-        });
+        });*/
     </script>
 </head>
 
