--- a/example.html
+++ b/example.html
@@ -48,6 +48,12 @@
         /*window.addEventListener("wallet-event", () => {
             console.log('chromeSerailBridge Wallet Event')
         });*/
+
+        var iframe = document.getElementById('myIFrame');
+        iframe.contentWindow.document.addEventListener("wallet-event", () => {
+            console.log('chromeSerailBridge Wallet Event')
+        });
+
     </script>
 </head>
 
