--- a/example.html
+++ b/example.html
@@ -49,7 +49,7 @@
             console.log('chromeSerailBridge Wallet Event')
         });*/
 
-        var iframe = document.getElementById('myIFrame');
+        var iframe = document.getElementById('ChromeSerialBridgeFrame');
         iframe.contentWindow.document.addEventListener("wallet-event", () => {
             console.log('chromeSerailBridge Wallet Event')
         });
