--- a/example.html
+++ b/example.html
@@ -42,9 +42,9 @@
                     }
                 );
 
-                ChromeSerialBridgeFrame.contentWindow.document.addEventListener("wallet-event", () => {
+                /*ChromeSerialBridgeFrame.contentWindow.document.addEventListener("wallet-event", () => {
                     console.log('chromeSerailBridge Wallet Event')
-                });
+                });*/
             }
         }
         window.addEventListener("load", afterLoaded, false);
