--- a/example.html
+++ b/example.html
@@ -17,7 +17,7 @@
         function checkSerialBridgePortIsConnect() {
             serialBridge.isPortConnect(
                 function(response) {
-                    console.debug("isPortConnect()", response)
+                    console.debug("isPortConnect()", response.result)
                 }
             );
         }
